welcome.lessons.welcome.loopfor.LoopStairs.scala.error
Runner:4: error: ')' expected but ';' found.
if(x==0) {setCouleurBrosse(baisseBrosse();Color.lightGray) ;}
                                         ^Runner:4: error: ';' expected but ')' found.
if(x==0) {setCouleurBrosse(baisseBrosse();Color.lightGray) ;}
                                                         ^Runner:5: error: ')' expected but ';' found.
if(x==1) {setCouleurBrosse(baisseBrosse();Color.blue);}
                                         ^Runner:5: error: ';' expected but ')' found.
if(x==1) {setCouleurBrosse(baisseBrosse();Color.blue);}
                                                    ^Runner:6: error: ')' expected but ';' found.
if(x==2) {setCouleurBrosse(baisseBrosse();Color.cyan);}
                                         ^Runner:6: error: ';' expected but ')' found.
if(x==2) {setCouleurBrosse(baisseBrosse();Color.cyan);}
                                                    ^Runner:7: error: ')' expected but ';' found.
if(x==3) {setCouleurBrosse(baisseBrosse();Color.green);}
                                         ^Runner:7: error: ';' expected but ')' found.
if(x==3) {setCouleurBrosse(baisseBrosse();Color.green);}
                                                     ^Runner:8: error: ')' expected but ';' found.
if(x==4) {setCouleurBrosse(baisseBrosse();Color.yellow);}
                                         ^Runner:8: error: ';' expected but ')' found.
if(x==4) {setCouleurBrosse(baisseBrosse();Color.yellow);}
                                                      ^Runner:9: error: ')' expected but ';' found.
if(x==5) {setCouleurBrosse(baisseBrosse();Color.orange);}
                                         ^Runner:9: error: ';' expected but ')' found.
if(x==5) {setCouleurBrosse(baisseBrosse();Color.orange);}
                                                      ^Runner:10: error: ')' expected but ';' found.
if(x==6) {setCouleurBrosse(baisseBrosse();Color.red);}
                                         ^Runner:10: error: ';' expected but ')' found.
if(x==6) {setCouleurBrosse(baisseBrosse();Color.red);}
                                                   ^Runner:11: error: ')' expected but '.' found.
if(x==7) {setCouleurBrosse(baisseBrosse()Color.magenta);}
                                              ^Runner:12: error: ')' expected but ';' found.
if(x==8) {setCouleurBrosse(baisseBrosse();Color.pink);}
                                         ^Runner:12: error: ';' expected but ')' found.
if(x==8) {setCouleurBrosse(baisseBrosse();Color.pink);}
                                                    ^